Fix multiline app names alignment

--- a/components/App.module.scss
+++ b/components/App.module.scss
@@ -20,6 +20,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   border: 1px solid #121212;
 
   a {
